mux-compiler/tests/snapshots/executable_integration__executable_integration__lexer_binary_literal.snap
---
source: mux-compiler/tests/executable_integration.rs
expression: output_to_snapshot
---
    Finished `dev` profile [unoptimized + debuginfo] target(s) in 0.02s
     Running `target/debug/mux_compiler run /home/derekcorn/code/mux-lang/test_scripts/error_cases/lexer_binary_literal.mux`
error: Invalid integer literal: 0b102
--> /home/derekcorn/code/mux-lang/test_scripts/error_cases/lexer_binary_literal.mux:2:10
   |
 2 | auto x = 0b102
   |          ^^^^^
